--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
   <ul>
-    <li class="home-button"><a href="#">Home233</a></li>
+    <li class="home-button"><a href="#">Home</a></li>
     <li class="about-button"><a href="#">About</a></li>
     <li class="contact-button"> <a href="#">Contact</a></li>
     <li class="contact-button"> <a onclick="clickToLogin()" href="#" >Login</a></li>
