--- a/hangman.html
+++ b/hangman.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styling.css" />
     <script defer src="learnJava.js"></script>
+    <script defer src="hangman.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cerulean/bootstrap.min.css" integrity="sha384-3fdgwJw17Bi87e1QQ4fsLn4rUFqWw//KU0g8TvV6quvahISRewev6/EocKNuJmEw" crossorigin="anonymous">
   </head>
@@ -30,7 +31,6 @@
             id="username"
             placeholder="Enter Username"
             name="username"
-            required
           />
 
           <label for="password"><b>Password</b></label>
@@ -40,7 +40,6 @@
             id="password"
             placeholder="Enter Password"
             name="password"
-            required
           />
 
           <button type="button" class="login-button" onclick="checkLogin()">
@@ -61,13 +60,25 @@
         </div>
         <div class="login-container2" id="login-container"style="display:none">
           <span class="psw"
-            ><a href="forgotpassword.html">Forgot password?</a></span
-          >
+            ><a href="forgotpassword.html">Forgot password?</a></span>
         </div>
-        
-      
     </form>
 
     <script src="learnJava.js"></script>
   </body>
+
+  <div class="hangman-container">
+    <body>
+      <h1 class="text-center">Hangman Game</h1>
+      <div class="text-center">Wrong Guesses: <span id='misstakes'>0</span> of <span id='maxWrong'>6</span></div>
+      <div class="text-center">
+        <img class="hangman-img" id='hangmanPic' src='/Images/hangman/0.jpg' alt="">
+        <p class="hangman-text text-red">Guess the Programming Language:</p>
+        <p class="hangman-text" id="wordSpotlight">The word to be guessed goes here</p>
+        <div id="keyboard"></div>
+        <button class="btn btn-info" onClick="reset()">Reset</button>
+      </div>
+    </body>
+  </div>
+
 </html>
