Added youtube video + file path

--- a/hangman.html
+++ b/hangman.html
@@ -72,7 +72,7 @@
       <h1 class="text-center">Hangman Game</h1>
       <div class="text-center">Wrong Guesses: <span id='misstakes'>0</span> of <span id='maxWrong'>6</span></div>
       <div class="text-center">
-        <img class="hangman-img" id='hangmanPic' src='/Images/hangman/0.jpg' alt="">
+        <img class="hangman-img" id='hangmanPic' src='images/hangman/0.jpg' alt="">
         <p class="hangman-text text-red">Guess the Programming Language:</p>
         <p class="hangman-text" id="wordSpotlight">The word to be guessed goes here</p>
         <div id="keyboard"></div>
