--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       
     </form>
     <iframe class="youtube-window" width="420" height="315"
-    src="https://www.youtube.com/embed/PcR8I-7oCnU">
+    src="https://www.youtube.com/embed/PcR8I-7oCnU?autoplay=1&mute=1">
     </iframe>
     <script src="learnJava.js"></script>
   </body>
