Added quiz game and new games tab

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styling.css" />
-    <script defer src="learnJava.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/styling.css" />
+    <script defer src="/js/learnJava.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cerulean/bootstrap.min.css" integrity="sha384-3fdgwJw17Bi87e1QQ4fsLn4rUFqWw//KU0g8TvV6quvahISRewev6/EocKNuJmEw" crossorigin="anonymous">
   </head>
@@ -14,7 +14,7 @@
     <nav>
   <ul>
     <li class="home-button"><a href="index.html">Home</a></li>
-    <li class="about-button"><a href="hangman.html">Game</a></li>
+    <li class="about-button"><a href="games.html">Games</a></li>
     <li class="contact-button"> <a href="#">Contact</a></li>
     <li class="contact-button"> <a onclick="clickToLogin()" href="#" >Login</a></li>
   </ul>
@@ -70,6 +70,6 @@
     <iframe class="youtube-window" width="420" height="315"
     src="https://www.youtube.com/embed/PcR8I-7oCnU?autoplay=1&mute=1">
     </iframe>
-    <script src="learnJava.js"></script>
+    <script src="js/learnJava.js"></script>
   </body>
 </html>
