--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styling.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/css/styling.css" />
     <title>Document</title>
-</head>
+  </head>
 
-
-    
-<body>
-  <p class="pass_error">Contact site owner, sorry for your inconvenience!</p>
-  <a href="index.html" class="return-forgpass">RETURN</a>
-</body>
+  <body>
+    <p class="pass_error">Contact site owner, sorry for your inconvenience!</p>
+    <a href="index.html" class="return-forgpass">RETURN</a>
+  </body>
 </html>
