--- a/games.html
+++ b/games.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/styling.css" />
     <link rel="stylesheet" type="text/css" href="/css/games_styling.css" />
     <script defer src="/js/learnJava.js"></script>
-    <script defer src="/js/hangman.js"></script>
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/materia/bootstrap.min.css" integrity="sha384-B4morbeopVCSpzeC1c4nyV0d0cqvlSAfyXVfrPJa25im5p+yEN/YmhlgQP/OyMZD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/cerulean/bootstrap.min.css" integrity="sha384-3fdgwJw17Bi87e1QQ4fsLn4rUFqWw//KU0g8TvV6quvahISRewev6/EocKNuJmEw" crossorigin="anonymous">
   </head>
 
   <body>
@@ -32,6 +31,7 @@
             id="username"
             placeholder="Enter Username"
             name="username"
+            required
           />
 
           <label for="password"><b>Password</b></label>
@@ -41,6 +41,7 @@
             id="password"
             placeholder="Enter Password"
             name="password"
+            required
           />
 
           <button type="button" class="login-button" onclick="checkLogin()">
@@ -61,25 +62,15 @@
         </div>
         <div class="login-container2" id="login-container"style="display:none">
           <span class="psw"
-            ><a href="forgotpassword.html">Forgot password?</a></span>
+            ><a href="forgotpassword.html">Forgot password?</a></span
+          >
         </div>
     </form>
-
-    <script src="learnJava.js"></script>
-  </body>
-
-  <div class="hangman-container">
-    <body>
-      <h1 class="text-center">Hangman Game</h1>
-      <div class="text-center">Wrong Guesses: <span id='misstakes'>0</span> of <span id='maxWrong'>6</span></div>
-      <div class="text-center">
-        <img class="hangman-img" id='hangmanPic' src='/Images/hangman/0.jpg' alt="">
-        <p class="hangman-text text-red">Guess the Programming Language:</p>
-        <p class="hangman-text" id="wordSpotlight">The word to be guessed goes here</p>
-        <div id="keyboard"></div>
-        <button class="btn btn-info" onClick="reset()">Reset</button>
-      </div>
-    </body>
-  </div>
-
-</html>
+    <form>
+    <div class="game-bar"><nav>
+      <ul>
+        <li class="hangman-button"><a href="hangman.html">Hangman Game</a></li>
+        <li class="quiz-button"><a href="webquiz.html">Quiz Game</a></li>
+      </ul>
+    </nav></div>
+  </form>
