fixed quiz game to actually work when click buttons

--- a/webquiz.html
+++ b/webquiz.html
@@ -76,9 +76,15 @@
     <div class="quiz-current-question">Current question: <span id="question">questions goes here 404</span></div>
     <div class=question-status>This is question <span id="current-question-count">1</span> out of <span id="max-question">10</span></div>
     <div class="answer-boxes" id="answer-boxes">
-      <button id="answer-0">Answer goes here</button> 
-      <button id="answer-1">Answer goes here</button>
-      <button id="answer-2">Answer goes here</button>
+      <div>
+        <button id="answer-0" value="answer-0" >Answer goes here</button>
+      </div>
+      <div>
+        <button id="answer-1" value="answer-1" >Answer goes here</button>
+      </div>
+      <div>
+        <button id="answer-2" value="answer-2">Answer goes here</button>
+      </div>
 
     </div>
   </body>
