added score counter

--- a/webquiz.html
+++ b/webquiz.html
@@ -85,6 +85,7 @@
       <div>
         <button id="answer-2" value="answer-2">Answer goes here</button>
       </div>
+      <div id="score-bar" class="score-bar">Score: <span id="score" class="score">404</span></div>
 
     </div>
   </body>
