--- a/webquiz.html
+++ b/webquiz.html
@@ -85,7 +85,7 @@
       <div>
         <button id="answer-2" value="answer-2">Answer goes here</button>
       </div>
-      <div id="score-bar" class="score-bar">Score: <span id="score" class="score">404</span></div>
+      <div id="score-bar" class="score-bar">Score: <span id="score" class="score">*current score*</span> Highscore: <span id="highscore" class="highscore">*current highscore*</span></div>
 
     </div>
   </body>
