--- a/webquiz.html
+++ b/webquiz.html
@@ -86,6 +86,7 @@
         <button id="answer-2" value="answer-2">Answer goes here</button>
       </div>
       <div id="score-bar" class="score-bar">Score: <span id="score" class="score">*current score*</span> Highscore: <span id="highscore" class="highscore">*current highscore*</span></div>
+      <button id="reset-highscore" class="reset-highscore" onclick="resetHighscore()">Reset Highscore</button>
 
     </div>
   </body>
