--- a/webquiz.html
+++ b/webquiz.html
@@ -87,10 +87,12 @@
       </div>
       <div id="score-bar" class="score-bar">Score: <span id="score" class="score">*current score*</span> Highscore: <span id="highscore" class="highscore">*current highscore*</span></div>
       <button id="reset-highscore" class="reset-highscore" onclick="resetHighscore()">Reset Highscore</button>
+      <footer><div class="footer-pics"><img class="github" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"> <img class="linkedin" src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/In-Blue-Logo.png.original.png"></div></footer>
 
     </div>
-  </body>
-</div>
-  
 
 </html>
+  </body>
+</div>
+
+
