fixed exit game button to redirect to google.

--- a/webquiz.html
+++ b/webquiz.html
@@ -42,16 +42,13 @@
           >
             Reset Highscore
           </button>
-          <button id="exit-button" class="exit-button-class" href="index.html">
+          <button
+            id="exit-button"
+            class="exit-button-class"
+            href="www.google.com"
+          >
             Exit Game
           </button>
-          <script>
-            var exitButton = document.getElementById("exit-button");
-
-            exitButton.addEventListener("click", function () {
-              window.location.href = "index.html";
-            });
-          </script>
         </div>
       </div>
     </div>
