fixed exit button

--- a/webquiz.html
+++ b/webquiz.html
@@ -42,13 +42,11 @@
           >
             Reset Highscore
           </button>
-          <button
-            id="exit-button"
-            class="exit-button-class"
-            href="www.google.com"
-          >
-            Exit Game
-          </button>
+          <a href="https://www.alvin-strandberg.se/">
+            <button id="exit-button" class="exit-button-class">
+              Exit Game
+            </button>
+          </a>
         </div>
       </div>
     </div>
